Fixes layout issue in the purchased tickets list view.

--- a/TrainTicketBookingSystem/Content/Site.css
+++ b/TrainTicketBookingSystem/Content/Site.css
@@ -71,6 +71,10 @@ select {
     color: #333;
 }
 
+.panel-body {
+    padding-left: 30px;
+}
+
 .banner {
     width: 300px;
     height: 250px;
